# aicura_platform_test

./: AUTHORS.md  HISTORY.md  LICENSE  README.md  pyproject.toml  tox.ini
aicura_platform_tutorial/: __init__.py
aicura_platform_tutorial/metrics/: __init__.py  my_metric.py
aicura_platform_tutorial/postprocessors/: __init__.py  my_postprocessor.py
tests/: __init__.py  test_components.py  test_minimal.py
