[tool.poetry]
name = "aicura_platform_tutorial"
version = "0.0.0"
description = "This package is doing..."
authors = [
    "Jonas Chromik <jonas.chromik@hpi.de>"
]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
cbdf-api = "3.0.3"

[build-system]
requires = [
    "poetry-core>=1.0.8",
    "poetry-dynamic-versioning>=0.17.1",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
